fix: counter number clipping

--- a/src/renderer/styles/components/_counter.scss
+++ b/src/renderer/styles/components/_counter.scss
@@ -16,7 +16,7 @@
     font-size: 110px;
     font-family: 'Alien Cyborg', sans-serif;
     letter-spacing: 10px;
-    transform: scale(1.55);
+    transform: scale(1.72);
     padding: 30px;
   }
 	.shine-rect {
