--- a/src/renderer/styles/main.css
+++ b/src/renderer/styles/main.css
@@ -357,7 +357,7 @@ svg {
   font-size: 110px;
   font-family: "Alien Cyborg", sans-serif;
   letter-spacing: 10px;
-  transform: scale(1.55);
+  transform: scale(1.72);
   padding: 30px;
 }
 .counter-container .shine-rect {
